set min height on chart container to stop jump of content

--- a/components/InsightsPage.module.css
+++ b/components/InsightsPage.module.css
@@ -23,6 +23,7 @@
   justify-content: center;
   align-items: flex-end;
   flex-direction: column;
+  min-height: 300px;
   margin-bottom: calc(var(--bsu-lg) * 2);
 }
 
